Adding images, new favicon, and restructure of the code

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,17 +1,17 @@
 <footer>
     <div class="grid-container">
       <div class="grid-item">
-        <fa-icon style="font-size: 50px; color: #C7E7F1;" [icon]="faThumbsUp"></fa-icon>
+        <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faThumbsUp"></fa-icon>
         <h4>Best price</h4>
         <p> Promise of lowest prices compared to competitors, will match or beat lower prices found elsewhere.</p>
       </div>
       <div class="grid-item">
-        <fa-icon style="font-size: 50px; color: #C7E7F1;" [icon]="faClockFout"></fa-icon>
+        <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faClockFout"></fa-icon>
         <h4>No surprises</h4>
         <p>Instant booking and confirmation of availability guaranteed.</p>
       </div>
       <div class="grid-item">
-        <fa-icon style="font-size: 50px; color: #C7E7F1;" [icon]="faPiggyBank"></fa-icon>
+        <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faPiggyBank"></fa-icon>
         <h4>Discounts</h4>
         <p>When making your reservation you'll receive discounts and free services.</p>
       </div>
