--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-main">
     <div class="title-container">
-        <h1>Hotel Jacqueline | Rincón de Guayabitos | Mexico </h1>
-        <h3>Your home away from home. Book with us.</h3>
+        <h1>Taco Mundo | Aguascalientes, Ags | Mexico </h1>
+        <h3>Discover the Flavors of Taco Mundo and Experience a Taste of Mexico</h3>
         <div class="star-container">
             <fa-icon style="font-size: 30px;" [icon]="faStar"></fa-icon>
             <fa-icon style="font-size: 30px;" [icon]="faStar"></fa-icon>
