--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,7 +4,7 @@
     grid-gap: 20px;
     justify-content: center;
     align-items: center;
-    background-color: #0b161b;
+    background-color: #000000;
     color: #fff;
     padding: 20px;
   }
@@ -15,7 +15,7 @@
   
   .grid-item-full {
     text-align: center;
-    background-color: #081820;
+    background-color: #E14C24;
     padding: 20px;
     color: white;
   }
@@ -55,7 +55,7 @@
   
   fa-icon {
     font-size: 30px;
-    color: #C7E7F1;
+    color: #E14C24;
     cursor: pointer;
   }
   
