--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -47,7 +47,7 @@ header {
   }
   
   .black {
-    background-color: #0b161b !important;
+    background-color: #000000 !important;
   }
   
   .content {
@@ -55,7 +55,7 @@ header {
   }
   
   .logo {
-    width: 30%;
+    width: 33%;
     height: 55px;
     box-sizing: border-box;
     display: flex;
@@ -69,7 +69,7 @@ header {
   
   .logo img {
     width: 375px;
-    height: 55px;
+    height: 75px;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
   }
