--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -33,7 +33,7 @@ h3 {
     height: 700px;
     min-height: 100%;
     min-width: 100%;
-    background-image: url(/assets/imgs/fake/fake1.jpg);
+    background-image: url(/assets/imgs/backgrounds/background1.webp);
     background-size: cover;
     background-position: center;
     margin: 0 auto;
