--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,6 +11,4 @@
         </div>
     </div>    
 </div>
-<app-section-home></app-section-home>
-<app-section-experience></app-section-experience>
-<app-section-satisfy></app-section-satisfy>
+<app-menu-container></app-menu-container>
