--- a/src/app/components/home/menu-container/menu-container.component.html
+++ b/src/app/components/home/menu-container/menu-container.component.html
@@ -4,12 +4,12 @@
     </div>
     <div class="menu-deploy">
       <!-- Table of Boostrap -->
-      <table class="table table-hover">
+      <table class="table-wird">
         <thead>
           <tr>
             <th colspan="2" class="title-cat">SeaFood</th>
           </tr>
-          <tr>
+          <tr class="sub-title">
             <th scope="col">Name</th>
             <th scope="col">Image</th>
           </tr>
@@ -21,12 +21,12 @@
           </tr>
         </tbody>
       </table>
-      <table class="table table-hover">
+      <table class="table-wird">
         <thead>
           <tr>
             <th colspan="2" class="title-cat">Meats</th>
           </tr>
-          <tr>
+          <tr class="sub-title">
             <th scope="col">Name</th>
             <th scope="col">Image</th>
           </tr>
@@ -38,12 +38,12 @@
           </tr>
         </tbody>
       </table>
-      <table class="table table-hover">
+      <table class="table-wird">
         <thead>
           <tr>
             <th colspan="2" class="title-cat">Desserts</th>
           </tr>
-          <tr>
+          <tr class="sub-title">
             <th scope="col">Name</th>
             <th scope="col">Image</th>
           </tr>
@@ -55,12 +55,12 @@
           </tr>
         </tbody>
       </table>
-      <table class="table table-hover">
+      <table class="table-wird">
         <thead>
           <tr>
             <th colspan="2" class="title-cat">Meats VIP</th>
           </tr>
-          <tr>
+          <tr class="sub-title">
             <th scope="col">Name</th>
             <th scope="col">Image</th>
           </tr>
