Change context of the footer, and style changes

--- a/src/app/components/home/menu-container/menu-container.component.scss
+++ b/src/app/components/home/menu-container/menu-container.component.scss
@@ -7,7 +7,7 @@
     padding-right: 60px;
     min-height: 100%;
     min-width: 100%;
-    background-color: #072230;
+    background-color: #0c0c0c;
     margin: 0 auto;
 }
 
