--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,32 +1,33 @@
 <footer>
-    <div class="grid-container">
-      <div class="grid-item">
-        <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faThumbsUp"></fa-icon>
-        <h4>Best price</h4>
-        <p> Promise of lowest prices compared to competitors, will match or beat lower prices found elsewhere.</p>
-      </div>
-      <div class="grid-item">
-        <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faClockFout"></fa-icon>
-        <h4>No surprises</h4>
-        <p>Instant booking and confirmation of availability guaranteed.</p>
-      </div>
-      <div class="grid-item">
-        <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faPiggyBank"></fa-icon>
-        <h4>Discounts</h4>
-        <p>When making your reservation you'll receive discounts and free services.</p>
-      </div>
-      <div class="contact">
-        <h3>Contact Us</h3>
-        <div class="social-icons">
-          <a href="#"><fa-icon [icon]="faFacebook" class="face"></fa-icon></a>
-          <a href="#"><fa-icon [icon]="faInstagram" class="insta"></fa-icon></a>
-          <a href="#"><fa-icon [icon]="faEnvelope" class="enve"></fa-icon></a>
-        </div>
+  <div class="grid-container">
+    <div class="grid-item">
+      <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faThumbsUp"></fa-icon>
+      <h4>Best Tacos</h4>
+      <p>Promise of the best prices for tacos compared to competitors, we will match or beat lower prices found
+        elsewhere.</p>
+    </div>
+    <div class="grid-item">
+      <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faClockFout"></fa-icon>
+      <h4>No surprises</h4>
+      <p>Instant ordering and confirmation of availability guaranteed.</p>
+    </div>
+    <div class="grid-item">
+      <fa-icon style="font-size: 50px; color: #FE9F1B;" [icon]="faPiggyBank"></fa-icon>
+      <h4>Discounts</h4>
+      <p>When placing your order, you'll receive discounts and complimentary services.</p>
+    </div>
+    <div class="contact">
+      <h3>Contact Us</h3>
+      <div class="social-icons">
+        <a href="#"><fa-icon [icon]="faFacebook" class="face"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="faInstagram" class="insta"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="faEnvelope" class="enve"></fa-icon></a>
       </div>
     </div>
-    <div class="grid-item-full">
-      <h1>- Hotel Jacqueline -</h1>
-      <p class="disclaimer">Disclaimer: This is not an official website its a University Proyect. This site offers the property's information and
-        telephone number, as well as online Booking service.</p>
-    </div>
-  </footer>
+  </div>
+  <div class="grid-item-full">
+    <h1>- Taco Mundo -</h1>
+    <p class="disclaimer">Disclaimer: This is not an official website, it's a University Project. This site offers
+      information about our tacos and contact details, as well as online ordering service.</p>
+  </div>
+</footer>
