--- a/src/app/components/home/menu-container/menu-container.component.html
+++ b/src/app/components/home/menu-container/menu-container.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="title-home">
-      <h1>Savor your favorites</h1>
+      <h1>Indulge in Your Taco Delights</h1>
     </div>
     <div class="menu-deploy">
       <!-- Table of Boostrap -->
