Adding new sections, and new styles

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,4 +11,10 @@
         </div>
     </div>    
 </div>
-<app-menu-container></app-menu-container>
+
+<app-section-mission></app-section-mission>
+<app-meet-our-team></app-meet-our-team>
+<app-menu-container id="restaurant"></app-menu-container>
+<app-explore></app-explore>
+<app-section-satisfy></app-section-satisfy>
+<app-form-book></app-form-book>
