--- a/src/app/components/home/form-book/form-book.component.scss
+++ b/src/app/components/home/form-book/form-book.component.scss
@@ -6,7 +6,7 @@
     padding-right: 60px;
     min-height: 100%;
     min-width: 100%;
-    background-color: #081820;
+    background-color: #FE9F1B;
     margin: 0 auto;
 }
 
@@ -39,7 +39,7 @@
 }
 
 fa-icon {
-    color: #C7E7F1;
+    color: #E14C24;
     cursor: pointer;
 }
 
