Context of the main page finished

--- a/src/app/components/home/explore/explore.component.html
+++ b/src/app/components/home/explore/explore.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="title-container-ex-main">
         <h1>Experience</h1>
-        <h2><span>OF A LIFE TIME</span></h2>
-        <p>Take your vacation to the next level and embark on an unforgettable adventure with Experience. <br> Don't settle
-            for the ordinary - let us show you the extraordinary.</p>
+        <h2><span>OF A LIFETIME</span></h2>
+        <p>Elevate your dining experience to new heights and indulge in the extraordinary at TacoMundo. <br> Don't settle
+            for the ordinary - let us take you on a culinary journey like no other.</p>
     </div>
 </div>
