--- a/src/app/components/home/form-book/form-book.component.html
+++ b/src/app/components/home/form-book/form-book.component.html
@@ -2,10 +2,10 @@
     <div class="title-container">
         <h3>We’d love to hear from you.
             Just choose the most convenient method and we’ll get back to you as soon as we can.</h3>
-        <p>Retorno Cedros 4, Rincón de Guayabitos<br>
+        <p> Av Colosio 404, Lazaro<br>
             México , 63727 <br>
             555 555 555 <br>
-            hoteljacqueline@gmail.com
+            tacomundo@gmail.com
         </p>
         <div class="social-icons">
             <a href="#"><fa-icon [icon]="faFacebook" class="enve face"></fa-icon></a>
