--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,8 +13,8 @@
 </div>
 
 <app-section-mission></app-section-mission>
-<app-meet-our-team></app-meet-our-team>
+<app-meet-our-team id="about"></app-meet-our-team>
 <app-menu-container id="restaurant"></app-menu-container>
-<app-explore></app-explore>
-<app-section-satisfy></app-section-satisfy>
-<app-form-book></app-form-book>
+<app-explore id="exp"></app-explore>
+<app-section-satisfy id="explore"></app-section-satisfy>
+<app-form-book id="contact-us"></app-form-book>
