--- a/src/app/components/home/section-satisfy/section-satisfy.component.html
+++ b/src/app/components/home/section-satisfy/section-satisfy.component.html
@@ -1,21 +1,21 @@
+
 <div class="container">
     <div class="title-home">
-      <h1>Satisfy</h1>
-      <h2><span>YOUR TASTEBUDS</span></h2>
-      <p>
-        <span class="spanP">
-          Treat yourself to a world-class dining experience with Satisfy, <br> our premier restaurant reservation service.
-          <br> Whether you're in the mood for gourmet cuisine or casual dining, <br> we have a wide range of options to
-          suit your
-          tastes and preferences <br>
-          With Satisfy, booking a table has never been easier. <br> <br> We'll take care of everything, from securing your reservation to ensuring that your dining experience is
-          nothing short of exceptional.
-          <br> <br>
-          Don't settle for mediocre meals - indulge in the finest culinary delights with Satisfy.
-        </span>
-      </p>
+        <h1>TacoMundo</h1>
+        <h2><span>DELIGHT YOUR TASTEBUDS</span></h2>
+        <p>
+            Treat yourself to a world-class dining experience at TacoMundo, our premier restaurant  <br> known for  exceptional
+            flavors and culinary mastery. <br> Whether you crave gourmet cuisine or casual Mexican  <br> fare, we offer a wide range
+            of tantalizing options to satisfy your every craving.
+            <br> <br>
+            With TacoMundo, booking a table is effortless. Our dedicated team ensures your reservation is secured and your
+            dining experience exceeds expectations. Indulge in finest culinary delights, crafted with passion and served
+            with attention to detail.
+            <br> <br>
+            Don't settle for mediocre meals - elevate your dining experience with TacoMundo.
+        </p>
     </div>
     <div class="image-container">
         <img class="img-1" src="assets/imgs/tacos/tacos3.jpeg">
     </div>
-  </div>
+</div>
