--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header [ngClass]="{'transparent': isTransparent, 'black': !isTransparent}" fxLayout="column" fxLayout="row"
   fxLayoutAlign="center center" fxLayoutGap="20px">
-  <a href="#rooms">Rooms</a>
+  <a href="#exp">Experience</a>
   <a href="#explore">Explore</a>
   <a href="#restaurant">Restaurant</a>
   <div class="logo" fxLayoutAlign="center center" routerLink="/">
