--- a/src/app/components/home/form-book/form-book.component.scss
+++ b/src/app/components/home/form-book/form-book.component.scss
@@ -62,15 +62,15 @@ fa-icon {
     margin-top: 25px;
     height: 50px;
     border-radius: 2rem;
-    background-color: #C7E7F1;
-    border: 2px solid #081820;
-    color: black;
+    background-color: #000000;
+    border: 2px solid #0000;
+    color: white;
     transition: background-color 0.3s ease, border 0.3s ease, transform 0.3s ease;
 }
 
 .btn-sub button:hover{
-    background-color: #081820;
-    color: white;
+    background-color: #0c0c0c;
+    color: #FE9F1B;
     border: 2px solid white;
     transform: scale(1.1);
 }
@@ -78,5 +78,5 @@ fa-icon {
 .input-cont input{
     width: 100%;
     padding: 5px;
-    border: 2px solid gray;
+    border: 2px solid #0c0c0c;
   }
