--- a/src/app/components/home/section-mission/section-mission.component.html
+++ b/src/app/components/home/section-mission/section-mission.component.html
@@ -1,18 +1,25 @@
 <div class="container">
     <div class="title-home">
-      <h1>Our Mission </h1>
-      <h2><span>Our Vision</span></h2>
-      <p>
-        At our hotel, our mission is to provide a memorable and comfortable stay for our guests by delivering exceptional
-        service, state-of-the-art amenities, and a warm and welcoming environment. We strive to be the premier destination
-        for travelers seeking relaxation and rejuvenation. 
-        <br> <br>
-        Our vision is to be recognized as the best hotel in the area, setting the standard for excellence in hospitality.
-        We value integrity, respect, and teamwork, and we are committed to continuous improvement in everything we do.
-      </p>
+        <h1>Our Mission</h1>
+        <h2><span>Our Vision</span></h2>
+        <p>
+            At TacoMundo, our mission is to provide a tantalizing and authentic dining experience for taco lovers by
+            offering
+            a wide variety of delicious tacos made with the freshest ingredients and bursting with flavor. We aim to
+            delight
+            our customers with exceptional service, a vibrant atmosphere, and a passion for Mexican cuisine.
+            <br> <br>
+            Our vision is to be recognized as the ultimate destination for taco enthusiasts, renowned for our culinary
+            excellence
+            and innovative taco creations. We are committed to upholding the highest standards of quality, authenticity,
+            and
+            customer satisfaction. Our team values creativity, authenticity, and a love for sharing the joy of tacos
+            with
+            our community.
+        </p>
     </div>
     <div class="image-container">
-      <img class="img-1" src="assets/imgs/tacos/tacos1.webp">
-      <img class="img-2" src="assets/imgs/tacos/tacos3.jpeg">
+        <img class="img-1" src="assets/imgs/tacos/tacos1.webp">
+        <img class="img-2" src="assets/imgs/tacos/tacos3.jpeg">
     </div>
 </div>
