--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -26,7 +26,7 @@
     height: 700px;
     min-height: 100%;
     min-width: 100%;
-    background-image: url(../../../assets/imgs/fake/sea-2.jpg);
+    background-image: url();
     background-size: cover;
     background-position: center;
     margin: 0 auto;
