--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -6,18 +6,18 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/register-student" routerLinkActive="active">
-                            Add User
+                            Add reservation
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/view-students" routerLinkActive="active">
-                            Users List
+                            Reservations List
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/queries" routerLinkActive="active">
-                            User queries
+                            Reservation queries
                         </a>
                     </li>
                     <li class="nav-item">
