--- a/src/app/components/add-student/add-student.component.html
+++ b/src/app/components/add-student/add-student.component.html
@@ -116,7 +116,7 @@
           class="btn btn-success"
           [disabled]="!userForm.valid"
         >
-          Add User
+          Add Reservation
         </button>
       </div>
     </div>
