--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -9,6 +9,16 @@
                             Add reservation
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/order" routerLinkActive="active">
+                            Add Order
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/orders-list" routerLinkActive="active">
+                            Orders List
+                        </a>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/view-students" routerLinkActive="active">
