--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,6 +12,7 @@
     <div class="username" (click)="toggleMenu()">{{userEmailHeader}}</div>
     <div class="menu" *ngIf="showMenu" >
       <a routerLink="/book">Book</a>
+       <a routerLink="/order">Place your order</a>
       <a (click)="logOut()" routerLink="/login">Log Out</a>
     </div>
   </div>
